pollishing translation Special thanks to Marie Lesy for rereading.

--- a/lang/nl/help/assignment/assignmenttype.html
+++ b/lang/nl/help/assignment/assignmenttype.html
@@ -7,5 +7,5 @@ De leerlingen zien een beschrijving van de opdracht, maar kunnen niets uploaden.
 cijfers toekennen aan de leerlingen en de leerlingen kunnen die zien.
 
 <P><B>Upload een bestand</B> - met deze optie kunnen leerlingen één bestand uploaden van gelijk welk type. Het kan een
-Word-document zijn, een afbeelding,een hele website in een zip-bestand. leraren kunnen de 
+Word-document zijn, een afbeelding,een hele website in een zip-bestand. Leraren kunnen de 
 inzendingen online beoordelen.
