--- a/lang/nl/help/coursenumsections.html
+++ b/lang/nl/help/coursenumsections.html
@@ -1,7 +1,7 @@
 <P ALIGN=CENTER><B>Aantal weken/onderwerpen</B></P>
 
-<P>Deze instelling wordt alleen gebruikt in het "wekelijks"en "onderwerp" formaat.
-<P>In het wekelijks formaat gaat het het aantal weken dat de cursus loopt instellen, vertrekkende van de
+<P>Deze instelling wordt alleen gebruikt in het "wekelijks" en "onderwerp" format.
+<P>In het "wekelijks" format gaat het het aantal weken dat de cursus loopt instellen, vertrekkende van de
 startdatum van het vak.
-<P>In het "onderwerp" formaat geeft deze instelling het aantal onderwerpen in dat vak.
+<P>In het "onderwerp" format geeft deze instelling het aantal onderwerpen in dat vak.
 <P>Beide instellingen bepalen het aantal hokjes in het midden van de vakpagina.
