--- a/lang/nl/help/forum/subscription.html
+++ b/lang/nl/help/forum/subscription.html
@@ -7,7 +7,7 @@ bewaard werd).
 <P>Meestal kun je kiezen of je lid wil zijn van een forum of niet.
 
 <P>Als leraar kun je het lidmaatschap op een bepaald forum afdwingen. De keuze is dan niet zichtbaar en alle leden 
-van de cursus zullen copies per e-mail krijgen.
+van de cursus zullen kopieën per e-mail krijgen.
 
 <P>Dit is vooral nuttig in he Nieuws forum en in forums naar het begin van een cursus toe (voor iedereen ontdekt heeft
 dat ze zich zelf kunnen inschrijven op deze e-mails).
