--- a/lang/nl/help/glossary/shows.html
+++ b/lang/nl/help/glossary/shows.html
@@ -3,7 +3,7 @@
 <P>Je kunt de manier waarop een gebruiker door de woordenlijst kan bladeren, aanpassen. Zoeken, bladeren volgens
 categorieën of op datum zijn altijd zichtbaar, maar je kunt drie opties toevoegen.</p>
 
-<p><b>Toon speciaal</b> Maakt het mogelijk of onmogelijk om te bladeren volgens speciale karakters,
+<p><b>Toon speciaal</b> Maakt het mogelijk of onmogelijk om te bladeren volgens speciale tekens,
 zoals @, #, enz.</p>
 
 <p><b>Toon alfabet</b> Maakt het mogelijk of onmogelijk om te bladeren volgens letters.</p>
