--- a/lang/nl/help/quiz/feedback.html
+++ b/lang/nl/help/quiz/feedback.html
@@ -1,4 +1,4 @@
 <P ALIGN=CENTER><B>Feedback</B></P>
 
-<P>Als je feedback inschakelt, dan zullen de leerlingen feedback krijgen bij elk antwoord (zowel de juiste als de foute)
+<P>Als je feedback activeert, dan zullen de leerlingen feedback krijgen bij elk antwoord (zowel de juiste als de foute).
 </p>
