--- a/lang/nl/help/quiz/formatgift.html
+++ b/lang/nl/help/quiz/formatgift.html
@@ -1,7 +1,7 @@
 <p align=center><b>Importeren van "GIFT" bestandsopmaak</b></p>
 
 
-<p>GIFT is het meest begrijpelijke importformaat voor het importeren van testen vanuit tekstbestanden
+<p>GIFT is het meest begrijpelijke importformat voor het importeren van testen vanuit tekstbestanden
  in Moodle.  Het ondersteunt meerkeuzevragen, waar/onwaar vragen, kort antwoord vragen, koppelvragen en numerieke vragen en eveneens het invoeren van
 een _______ voor het gatentekstformaat. Verschillende types vragen kunnen gemengd worden in een enkel tekstbestand
 en de opmaak ondersteunt ook commentaar, namen voor de vragen, feedback en gewogen cijfers.</p>
