--- a/lang/nl/help/quiz/import.html
+++ b/lang/nl/help/quiz/import.html
@@ -8,10 +8,10 @@ Een aantal bestandsformaten worden ondersteund:
 
 <P><B>GIFT</B></P>
 <ul>
-<p>GIFT is het meest uitgebreide importformaat beschikbaar voor het importeren van Moodle test vragen vanuit een
+<p>GIFT is het meest uitgebreide importformat beschikbaar voor het importeren van Moodle testvragen vanuit een
 tekstbestand. Het is ontworpen als gemakkelijke importeermethode voor Moodle test vragen vanuit tekstbestanden. Het ondersteunt
 meerkeuzevragen, waar/onwaar, kort antwoord, koppelvragen en numerieke vragen, evenals het invoeren van een __________ voor 
-het gatentekstformaat. Verschillende vragentypes kunnen gemixt worden in één tekstbestand en de opmaak ondersteund ook 
+het gatentekstformaat. Verschillende vragentypes kunnen gemixt worden in één tekstbestand en de opmaak ondersteunt ook 
 commentaar, vraagnamen, feedback en procentuele weging van cijfers. Hieronder enkele voorbeelden:</p>
 <pre>
 Wie is er begraven in de tombe van Grant?{~Grant ~Jefferson =niemand}
@@ -31,7 +31,7 @@ Wanneer was Ulysses S. Grant geboren?{#1822:1}
 <P><B>Aiken</B></P>
 <ul>
 <p>De Aiken bestandsopmaak is een heel eenvoudige manier om meerkeuzevragen te creëren door gebruik te maken van een
-duidelijk, door mensen leesbare opmaak. Hieronder een voorbeeld van de opmaak:</p>
+duidelijk, voor mensen leesbare opmaak. Hieronder een voorbeeld van de opmaak:</p>
 <pre>
 Wat is het doel van eerste hulp?
 A. Levens redden, verdere kwetsuren voorkomen, goede gezondheid bewaren
@@ -95,7 +95,7 @@ zullen worden in koppel vragen</P>
 
 <P><B>Blackboard</B></P>
 <UL>
-<P>Met deze module kun je vragen importeren die in het exportformaat van Blackboard gemaakt zijn. Het steunt
+<P>Met deze module kun je vragen importeren die in het exportformat van Blackboard gemaakt zijn. Het steunt
 op xml-functies die door PHP gecompileerd worden.</P>
 
 <p align=right><a href="help.php?file=formatblackboard.html&module=quiz">Meer info over "Blackboard" formaat</a></p>
@@ -126,7 +126,7 @@ gebruikt.</p>
 
 <P><B>Ingebedde antwoorden (Cloze)</B></P>
 <UL>
-<P>Met dit importformaat kun je slechts één soort vragen importeren: de ingebedde antwoorden (ook bekend als "cloze")
+<P>Met dit importformat kun je slechts één soort vragen importeren: de ingebedde antwoorden (ook bekend als "cloze")
 <p align=right><a href="help.php?file=multianswer.html&module=quiz">Meer informatie over het "Cloze" formaat</a></p>
 </UL>
  
