--- a/lang/nl/help/quiz/maxgrade.html
+++ b/lang/nl/help/quiz/maxgrade.html
@@ -1,8 +1,8 @@
 <P ALIGN=CENTER><B>Hoogst haalbare cijfer</B></P>
 
-<P>Het hoogst haalbare cijfer is het cijfer naarwaar alle beoordelingen omgerekend worden.
+<P>Het hoogst haalbare cijfer is het cijfer waarnaar alle beoordelingen omgerekend worden.
 
 <P>Je zou bijvoorbeeld het hoogst haalbare cijfer kunnen instellen op 20, omdat de test 20% waard is op het geheel
-van de cursus
+van de cursus.
 <P>Zelfs al zou je 10 vragen in je test hebben die op een totaal van 50 punten staan, dan nog worden de punten op 50
-herberekend naar een maximumcijfer van 20.
+omgerekend naar een maximumcijfer van 20.
