--- a/lang/nl/help/scales.html
+++ b/lang/nl/help/scales.html
@@ -4,7 +4,7 @@
 </p>
 
 <p>De naam van de schaal zou de schaal duidelijk moeten identificeren: deze naam zal verschijnen in een schaal-selectielijst
-en onder contekstgevoelige helpknoppen
+en onder contextgevoelige helpknoppen
 
 <p>De schaal zelf wordt gedefinieerd door een geordende lijst van waarden, gerangschikt van negatief naar positief en gescheiden door komma's. Bijvoorbeeld:</p>
 
