--- a/lang/nl/help/assignment/resubmit.html
+++ b/lang/nl/help/assignment/resubmit.html
@@ -4,6 +4,6 @@
 
 <P>Als je deze optie inschakelt, kunnen leerlingen hun opdracht opnieuw insturen nadat ze al beoordeeld is (zodat je 
 ze kunt herbeoordelen). Dit kan nuttig zijn wanneer leraren hun leerlingen willen aanmoedigen om beter werk te leveren
-in een itteratief proces.</P>
+in een iteratief proces.</P>
 
 <P>Deze optie is natuurlijk niet relevant voor offline opdrachten.</P>
