--- a/lang/nl/help/chat/mods.html
+++ b/lang/nl/help/chat/mods.html
@@ -1,6 +1,6 @@
 <P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/chat/icon.gif">&nbsp;<B>Chats</B></P>
 <UL>
-<P>De chat module geeft gebruikers de mogelijkheid om een real-time synchrone discussie te voeren
-via het internet. Dit is een goede manier om elkaar en het onderwerp wat ter discussie staat te leren kennen; de manier van werken in een chatroom is heel anders dan in de asynchrone forums. De chat module 
-heeft een aantal mogelijkheden voor het beheren en nalezen van oude chatdiscussies.</P>
+<P>De chatmodule geeft gebruikers de mogelijkheid om een real-time synchrone discussie te voeren
+via het internet. Dit is een goede manier om elkaar en het onderwerp dat ter discussie staat te leren kennen; de manier van werken in een chatroom is heel anders dan in de asynchrone forums. De chatmodule 
+heeft een aantal mogelijkheden voor het beheren en nalezen van voorbije chatdiscussies.</P>
 </UL>
