--- a/lang/nl/help/courseformats.html
+++ b/lang/nl/help/courseformats.html
@@ -5,13 +5,13 @@
 Het vak wordt week per peek georganiseerd, met een duidelijke startdatum en einddatum
 Elke week wordt opgebouwd uit activiteiten. Sommige van die activiteiten kunnen over verschillende weken lopen, zoals logboeken. Een logboek kan bijvoorbeeld gedurende twee weken vanaf de startdatum lopen.
 </UL>
-<P><B>Onderwerp formaat</B></P>
+<P><B>Onderwerp format</B></P>
 <UL>
 Dit formaat lijkt erg op het wekelijks formaat, behalve dat elke week een onderwerp genoemd wordt. Een onderwerp is 
 niet beperkt door een tijdslimiet. Je hoeft geen datums in te stellen.
 </UL>
-<P><B>Sociaal formaat</B></P>
-<UL>Dit formaat is gebouwd rond één hoofdforum, het Sociale Forum. Dat verschijnt op de startpagina van het vak. Het is 
+<P><B>Sociale format</B></P>
+<UL>Deze format is gebouwd rond één hoofdforum, het Sociale Forum. Dat verschijnt op de startpagina van het vak. Het is 
 nuttig voor situaties die minder vormgebonden zijn. Het moet zelfs niet over vakken gaan. Zo zou het bijvoorbeeld
 kunnen dienen als aankondigingenbord voor een departement.
 </UL>
