--- a/lang/nl/help/coursenewsitems.html
+++ b/lang/nl/help/coursenewsitems.html
@@ -1,6 +1,6 @@
 <P ALIGN=CENTER><B>Weer te geven nieuwsitems</B></P>
 
-<P>In het "wekelijks" en het "onderwerp" formaat verschijnt er een speciaal forum dat "Nieuws" heet. Het is de ideale plek
+<P>In het "wekelijks" en het "onderwerp" format verschijnt er een speciaal forum dat "Nieuws" heet. Het is de ideale plek
 om nota's te posten die alle leerlingen moeten zien. (Standaard zijn alle leerlingen ingeschreven (lid) in dit forum en zullen 
 ze je notitie krijgen via e-mail).
 <P>Deze instelling bepaalt hoeveel recente nieuwsitems zullen verschijnen op de startpagina van je vak.
