--- a/lang/nl/help/coursestartdate.html
+++ b/lang/nl/help/coursestartdate.html
@@ -1,10 +1,9 @@
 <P ALIGN=CENTER><B>Begindatum van het vak</B></P>
 
 <P>Hier bepaal je de startdatum van je vak of cursus. (in je eigen tijdzone)
-<P>Deze keuze bepaalt hoe je vak er gaat uitzien als je kiest voor het "wekelijks formaat". De eerste week begint op
+<P>Deze keuze bepaalt hoe je vak er gaat uitzien als je kiest voor het "wekelijks format". De eerste week begint op
 de datum die je hier instelt.
-<P>Deze instelling heeft weinig belang voor vakken met "sociaal" of "onderwerp" formaat.
-<P>De enige plaats waar deze instelling nog effect heeft is in de logbestanden: je zult geen logbestanden kunnen bekijken van 
-vóór deze datum.
+<P>Deze instelling heeft weinig belang voor vakken met het "sociaal" of "onderwerp" format.
+<P>De enige plaats waar deze instelling nog effect heeft is in de logbestanden: je zult geen logbestanden kunnen bekijken van vóór deze datum.
 <P>Het is dus meestal wel zinnig om deze datum in te stellen op de startdatum van je cursus, als die datum bepaald is.
-En dit voor gelijk welk formaat.
+En dit voor gelijk welke format.
