--- a/lang/nl/help/glossary/mainglossary.html
+++ b/lang/nl/help/glossary/mainglossary.html
@@ -1,5 +1,5 @@
-<P ALIGN=CENTER><B>Hoofd woordenlijst</B></P>
+<P ALIGN=CENTER><B>Hoofdwoordenlijst</B></P>
 <p>Het woordenlijstsysteem maakt het mogelijk om definities van de secundaire woordenlijsten naar 
-de hoofd woordenlijst van dit vak uit te voeren. 
-<p>Om dit te doen moet u de hoofd woordenlijst specifiëren. Merk op dat je slechts één hoofd 
-woordenlijst per vak kan hebben en dat alleen leraren hem kunnen updaten.</p>
+de hoofdwoordenlijst van dit vak over te hevelen. 
+<p>Om dit te doen moet je de hoofdwoordenlijst specifiëren. Merk op dat je slechts één hoofd 
+woordenlijst per vak kan hebben en dat alleen leraren hem kunnen wijzigen.</p>
