--- a/lang/nl/help/quiz/correctanswers.html
+++ b/lang/nl/help/quiz/correctanswers.html
@@ -1,4 +1,4 @@
 <P ALIGN=CENTER><B>In feedback de juiste antwoorden laten zien</B></P>
 
-<P>Indien je dit aanschakelt, dan wordt er bij elke vraag samen met de feedback ook het juiste antwoord getoond.
+<P>Indien je dit activeert, dan wordt bij elke vraag samen met de feedback ook het juiste antwoord getoond.
 </P>
