--- a/lang/nl/help/quiz/formataiken.html
+++ b/lang/nl/help/quiz/formataiken.html
@@ -1,7 +1,7 @@
 <p align=center><b>Importeren van "Aiken" bestandsopmaak</b></p>
 
-<p>Het Aiken formaat is een heel eenvoudige manier om meerkeuzevragen te maken vanuit een duidelijk en door
-mensen leesbare opmaak.Hier zie je een voorbeeld van de opmaak:</p>
+<p>Het Aiken format is een heel eenvoudige manier om meerkeuzevragen te maken vanuit een duidelijk en door
+mensen leesbare opmaak. Hier zie je een voorbeeld van de opmaak:</p>
 <pre>
 Wat is het juiste antwoord op deze vraag?
 A. Is dit het juiste?
