--- a/lang/nl/help/quiz/shuffleanswers.html
+++ b/lang/nl/help/quiz/shuffleanswers.html
@@ -4,6 +4,6 @@
 
 <p>Dit gaat natuurlijk alleen maar op voor vragen die meerdere antwoorden tonen, zoals meerkeuzevragen
 of koppelvragen.</p>
-<p>De bedoeling is gewoon om leerlingen het moeilijker te maken om te spieken</p>
+<p>De bedoeling is gewoon om leerlingen het moeilijker te maken om te spieken.</p>
 
-<p>Deze optie heeft niets te maken met willekeurige vragen</p>
+<p>Deze optie heeft niets te maken met willekeurige vragen.</p>
