First version of inter-activities mantained in backup/restore. All the conversion to some pseudo-codes are done at backup time. In the restore process, every link is decoded to new ids. For now, this is supported: - In backup:   -all links to forums are encoded. - In restore:   - all links to forums are decoded.       - from forums (post->message).       - from resources (resource->alltext). The process requires a backup made with the same version (because it has to be properly encoded at backup time). Old backups will work without conversions at all. Only tested with some little courses. It would be perfect to have some "big" course to test it. Please, test and feedback, ciao :-)

--- a/backup/restore_execute.html
+++ b/backup/restore_execute.html
@@ -275,6 +275,14 @@
         }
     }
 
+    //Now, if all is OK, adjust inter-activity links
+    if ($status) {
+        echo "<li>".get_string("decodinginternallinks");
+        if (!$status = restore_decode_content_links($restore)) {
+            notify("Could not refresh events for activities!");
+        }
+    }
+
     //Now if all is OK, update:
     //   - course modinfo field 
     //   - categories table
