--- a/lang/nl/help/quiz/index.html
+++ b/lang/nl/help/quiz/index.html
@@ -25,11 +25,11 @@
   <li><a href="help.php?module=quiz&file=maxgrade.html">Maximale cijfer</a>
   <li><a href="help.php?module=quiz&file=createmultiple.html">Meerkeuze testen maken</a>
   <li><a href="help.php?module=quiz&file=multichoice.html">Meerkeuzevragen</a>
+  <li><a href="help.php?module=quiz&file=shufflequestions.html">Mix de vragen</a>
   <li><a href="help.php?module=quiz&file=numerical.html">Numeriek vragen</a>
   <li><a href="help.php?module=quiz&file=attempts.html">Pogingen</a>
   <li><a href="help.php?module=quiz&file=questiontypes.html">Vraag types - een nieuwe vraag maken</a>
-  <li><a href="help.php?module=quiz&file=shufflequestions.html">Vragen schudden</a>
   <li><a href="help.php?module=quiz&file=randomsamatch.html">Willekeurige Kort antwoord koppelvragen</a>
-  <li><a href="help.php?module=quiz&file=random.html">Willekeurige vragen</a>
+  <li><a href="help.php?module=quiz&file=random.html">Willekeurige vraag uit categorie</a>
   <li><a href="help.php?module=quiz&file=truefalse.html">Waar/Onwaar vragen</a>
 </ul>
