--- a/lang/nl/help/quiz/questiontypes.html
+++ b/lang/nl/help/quiz/questiontypes.html
@@ -49,17 +49,17 @@ niet hoofdlettergevoelig zijn.
 <p align=right><a href="help.php?file=multianswer.html&module=quiz">Meer informatie over ingebedde antwoord vragen</a></p>
 </UL>
 
-<P><B>Willekeurige kort antwoordvragen koppelen</B></P>
+<P><B>Willekeurige korte antwoorden koppelen</B></P>
 <UL>
 <P>Voor de leerling zien deze vragen er uit zoals koppelvragen. Het verschil is dat de deelvraagjes willekeurig gekozen worden uit de kort antwoordvragen die in de gekozen categorie voorkomen.
 </P>
 <p align=right><a href="help.php?file=randomsamatch.html&module=quiz">Meer informatie over koppelvragen</a></p>
 </UL>
 
-<P><B>Willekeurige set vragen</B></P>
+<P><B>Willekeurige vragen uit categorie</B></P>
 <UL>
 <P>Geeft je de mogelijkheid om een aantal vragen uit een grote set aan te bieden. Bij elke poging van de leerling worden de vragen willekeurig gekozen uit de opgegeven categorie, zodat de leerling telkens een andere test krijgt aangeboden.</P>
-<p align=right><a href="help.php?file=random.html&module=quiz">Meer informatie over willekeurige set vragen</a></p>
+<p align=right><a href="help.php?file=random.html&module=quiz">Meer informatie over willekeurige vragen uit categorie</a></p>
 </UL>
 
 <P><B>Beschrijving</B></P>
