--- a/lang/nl/help/quiz/random.html
+++ b/lang/nl/help/quiz/random.html
@@ -1,4 +1,4 @@
-<p align="center"><b>Willekeurige set</b></p>
+<p align="center"><b>Willekeurige vraag uit categorie</b></p>
 
 <p>Dit is een speciaal type vraag</p>
 
