--- a/lang/nl/help/quiz/randomsamatch.html
+++ b/lang/nl/help/quiz/randomsamatch.html
@@ -1,10 +1,10 @@
-<p align=center><b>Willekeurige kort antwoordvragen paren</b></p>
+<p align=center><b>Willekeurige korte antwoorden koppelen</b></p>
 
 <p>Na een (optionele) inleiding, wordt de leerling een aantal deelvragen 
 aangeboden en een reeks antwoorden. Voor elke vraag is er een juist antwoord.</p>
 <p>De leerling moet de antwoorden selecteren en koppelen aan de deelvragen.</p>
 <p>Elke deelvraag weegt even sterk door op het puntentotaal van de hele vraag.</p>
 
-<p>De vragen en antwoorden worden willekeurig gehaald uit de set 'Kort antwoord' vragen
+<p>De vragen en antwoorden worden willekeurig gehaald uit de set 'Kort antwoord'-vragen
 van de gekozen categorie. Elke keer de test wordt afgelegd zullen er andere vragen en 
 antwoorden verschijnen.</p>
