--- a/calendar/event_new.html
+++ b/calendar/event_new.html
@@ -1,5 +1,5 @@
 <form method="post" action="event.php" name="new">
-<table class="formtable">
+<table cellpadding=5>
   <tr>
     <td style="vertical-align: top; text-align: right;"><?php print_string('eventname', 'calendar'); ?>:</td>
     <td><input type="text" name="name" size="67" value="<?php p($form->name); ?>" /> <?php if (isset($err['name'])) formerr($err['name']); ?></td>
@@ -7,8 +7,10 @@
   <tr>
     <td style="vertical-align: top; text-align: right;"><?php print_string('eventdescription', 'calendar'); ?>:</td>
     <td>
-      <textarea name="description" rows="10" cols="50" wrap="virtual"><?php p($form->description); ?></textarea><br />
-      <?php if (isset($err['description'])) formerr($err['description']); ?>
+    <?php 
+        print_textarea($usehtmleditor, 10, 65, 630, 200, "description", $form->description);
+        if (isset($err['description'])) formerr($err['description']); 
+    ?>
     </td>
   </tr>
   <tr>
@@ -25,8 +27,7 @@
     </td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
-    <td><p><input type="submit" value="<?php print_string('ok') ?>"></p></td>
+    <td align="center" colspan="2"><p><input type="submit" value="<?php print_string('savechanges') ?>"></p></td>
   </tr>
 </table>
 <p>
@@ -36,7 +37,7 @@
 <input type="hidden" name="modulename" value="<?php echo $form->modulename?>" />
 <input type="hidden" name="eventtype" value="<?php echo $form->eventtype?>" />
 <input type="hidden" name="instance" value="<?php echo $form->instance?>" />
-<!--<input type="hidden" name="format" value="<?php echo $form->format; ?>" />-->
+<input type="hidden" name="format" value="<?php echo $form->format; ?>" />
 <input type="hidden" name="action" value="new" />
 <input type="hidden" name="type" value="defined" />
 </p>
