--- a/lang/en/help/coursehiddentopics.html
+++ b/lang/en/help/coursehiddentopics.html
@@ -3,8 +3,7 @@
 <P>This option allows you to decide how the hidden topics in your course 
    are going to be displayed to students.</p>
 
-<p>You can select to show them in collapsed form or hiding them 
-   at all.</p>
+<p>They can be completely hidden or shown in collapsed form.</p>
 
-<p>This setting only has effect in courses using the "Topics" format.</p>
+<p>This setting only affects courses using the "Topics" format.</p>
 
