--- a/mod/forum/mod.html
+++ b/mod/forum/mod.html
@@ -23,6 +23,12 @@
     if (!isset($form->maxbytes)) {
         $form->maxbytes = $CFG->forum_maxbytes;
     }
+    if (!isset($form->rsstype)) {
+        $form->rsstype = 0;
+    }
+    if (!isset($form->rssarticles)) {
+        $form->rssarticles = 0;
+    }
 ?>
 <form name="form" method="post" <?php echo $onsubmit ?> action="mod.php">
 <table cellpadding=5>
@@ -109,7 +115,44 @@
         ?>
 	</td>
 </tr>
+<?php  
+    //Only show rss parameters if rss is activated at site and forum levels  
+    if ($CFG->enablerssfeeds && $CFG->forum_enablerssfeeds) {
+        echo "<tr valign=top>";
+        echo "<td align=right><p><b>".get_string("rsstype", "forum")."</b></p></td>";
+        echo "<td>";
+        unset($choices);
+        $choices[0] = get_string("none");
+        $choices[1] = get_string("discussions", "forum");
+        $choices[2] = get_string("posts", "forum");
+        choose_from_menu ($choices, "rsstype", $form->rsstype, "");
+        helpbutton("rsstype", get_string("rsstype", "forum"), "forum");
+        echo "</td>";
+        echo "</tr>";
 
+        echo "<tr valign=top>";
+        echo "<td align=right><p><b>".get_string("rssarticles", "forum")."</b></p></td>";
+        echo "<td>";
+        unset($choices);
+        $choices[0] = "0";
+        $choices[1] = "1";
+        $choices[2] = "2";
+        $choices[3] = "3";
+        $choices[4] = "4";
+        $choices[5] = "5";
+        $choices[10] = "10";
+        $choices[15] = "15";
+        $choices[20] = "20";
+        $choices[25] = "25";
+        $choices[30] = "30";
+        $choices[40] = "40";
+        $choices[50] = "50";
+        choose_from_menu ($choices, "rssarticles", $form->rssarticles, "");
+        helpbutton("rssarticles", get_string("rssarticles", "forum"), "forum");
+        echo "</td>";
+        echo "</tr>";
+    }
+?>
 <tr>
     <td align=right valign=top><p><b><?php print_string("allowratings", "forum") ?>:</b></p></td>
     <td>
