added help files for most options of the module.  Updated and clarified the main module description help file.

--- a/lang/en/help/attendance/mods.html
+++ b/lang/en/help/attendance/mods.html
@@ -1,7 +1,5 @@
-<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/attendance/icon.gif">&nbsp;<B>Attendance</B></P>
-<UL>
-<P>This module allows you to record the attendance of the each participant
-   for a particular event.
-</P>
-</UL>
+<p><img valign="absmiddle" src="<?php echo $CFG->wwwroot?>/mod/attendance/icon.gif">&nbsp;<b>Attendance</b></p>
+<ul>
+<p>This module allows you to record the attendance of each participant in an on-site or on-line class session.  Attendance can be logged manually by any teacher in the course, or automatically based on participant activity within the twenty-four hour period of the attendance date.</p>
+</ul>
 
