Now glossaries can produce RSS feeds too !! Some strings (RSS related) has been moved from forum.php to moodle.php to avoid suplicating them once per module. It seems to work fine, please test...:-)

--- a/mod/forum/config.html
+++ b/mod/forum/config.html
@@ -67,7 +67,7 @@
     <?php 
         print_string("configenablerssfeeds","forum");
         if ($CFG->enablerssfeeds == 0) {
-            print_string("configenablerssfeedsdisabled","forum");
+            print_string("configenablerssfeedsdisabled");
         }
     ?>
     </td>
