--- a/mod/forum/mod.html
+++ b/mod/forum/mod.html
@@ -119,19 +119,19 @@
     //Only show rss parameters if rss is activated at site and forum levels  
     if ($CFG->enablerssfeeds && $CFG->forum_enablerssfeeds) {
         echo "<tr valign=top>";
-        echo "<td align=right><p><b>".get_string("rsstype", "forum")."</b></p></td>";
+        echo "<td align=right><p><b>".get_string("rsstype")."</b></p></td>";
         echo "<td>";
         unset($choices);
         $choices[0] = get_string("none");
         $choices[1] = get_string("discussions", "forum");
         $choices[2] = get_string("posts", "forum");
         choose_from_menu ($choices, "rsstype", $form->rsstype, "");
-        helpbutton("rsstype", get_string("rsstype", "forum"), "forum");
+        helpbutton("rsstype", get_string("rsstype"), "forum");
         echo "</td>";
         echo "</tr>";
 
         echo "<tr valign=top>";
-        echo "<td align=right><p><b>".get_string("rssarticles", "forum")."</b></p></td>";
+        echo "<td align=right><p><b>".get_string("rssarticles")."</b></p></td>";
         echo "<td>";
         unset($choices);
         $choices[0] = "0";
@@ -148,7 +148,7 @@
         $choices[40] = "40";
         $choices[50] = "50";
         choose_from_menu ($choices, "rssarticles", $form->rssarticles, "");
-        helpbutton("rssarticles", get_string("rssarticles", "forum"), "forum");
+        helpbutton("rssarticles", get_string("rssarticles"), "forum");
         echo "</td>";
         echo "</tr>";
     }
