--- a/mod/glossary/config.html
+++ b/mod/glossary/config.html
@@ -264,6 +264,30 @@
 
 	</td>
 </tr>
+<tr valign=top>
+        <td align=right><p>glossary_enablerssfeeds:</td>
+        <td>
+    <?php
+        if ($CFG->enablerssfeeds == 0) {
+            print_string("no");
+        } else {
+            unset($options);
+            $options[0] = get_string("no");
+            $options[1] = get_string("yes");
+
+            choose_from_menu ($options, "glossary_enablerssfeeds", $CFG->glossary_enablerssfeeds, "", "", "");
+        }
+    ?>
+    </td>
+    <td>
+    <?php
+        print_string("configenablerssfeeds","glossary");
+        if ($CFG->enablerssfeeds == 0) {
+            print_string("configenablerssfeedsdisabled");
+        }
+    ?>
+    </td>
+</tr>
 <tr>
     <td colspan=3 align=center>
 	<input type="submit" value="<?php print_string("savechanges") ?>"></td>
