--- a/mod/glossary/mod.html
+++ b/mod/glossary/mod.html
@@ -46,6 +46,12 @@ if (!isset($form->showalphabet)) {
 if (!isset($form->showspecial)) {
     $form->showspecial = 1;
 }
+    if (!isset($form->rsstype)) {
+        $form->rsstype = 0;
+    }
+    if (!isset($form->rssarticles)) {
+        $form->rssarticles = 0;
+    }
 ?>
 <FORM name="form" method="post" action="<?=$ME ?>">
 <CENTER>
@@ -322,6 +328,44 @@ if (!$mainglossary or $mainglossary->id == $form->instance ) {
   </select> <?php helpbutton("shows", get_string("showall", "glossary"), "glossary") ?>
     </TD>
 </TR>
+<?php
+    //Only show rss parameters if rss is activated at site and glossary levels
+    if ($CFG->enablerssfeeds && $CFG->glossary_enablerssfeeds) {
+        echo "<tr valign=top>";
+        echo "<td align=right><p><b>".get_string("rsstype")."</b></p></td>";
+        echo "<td>";
+        unset($choices);
+        $choices[0] = get_string("none");
+        $choices[1] = get_string("withauthor", "glossary");
+        $choices[2] = get_string("withoutauthor", "glossary");
+        choose_from_menu ($choices, "rsstype", $form->rsstype, "");
+        helpbutton("rsstype", get_string("rsstype"), "glossary");
+        echo "</td>";
+        echo "</tr>";
+
+        echo "<tr valign=top>";
+        echo "<td align=right><p><b>".get_string("rssarticles")."</b></p></td>";
+        echo "<td>";
+        unset($choices);
+        $choices[0] = "0";
+        $choices[1] = "1";
+        $choices[2] = "2";
+        $choices[3] = "3";
+        $choices[4] = "4";
+        $choices[5] = "5";
+        $choices[10] = "10";
+        $choices[15] = "15";
+        $choices[20] = "20";
+        $choices[25] = "25";
+        $choices[30] = "30";
+        $choices[40] = "40";
+        $choices[50] = "50";
+        choose_from_menu ($choices, "rssarticles", $form->rssarticles, "");
+        helpbutton("rssarticles", get_string("rssarticles"), "glossary");
+        echo "</td>";
+        echo "</tr>";
+    }
+?>
 <tr>
     <td align=right valign=top><p><b><?php print_string("allowratings", "glossary") ?>:</b></p></td>
     <td>
