--- a/mod/glossary/mod.html
+++ b/mod/glossary/mod.html
@@ -332,7 +332,7 @@ if (!$mainglossary or $mainglossary->id == $form->instance ) {
     //Only show rss parameters if rss is activated at site and glossary levels
     if ($CFG->enablerssfeeds && $CFG->glossary_enablerssfeeds) {
         echo "<tr valign=top>";
-        echo "<td align=right><p><b>".get_string("rsstype")."</b></p></td>";
+        echo "<td align=right><p><b>".get_string("rsstype").":</b></p></td>";
         echo "<td>";
         unset($choices);
         $choices[0] = get_string("none");
@@ -344,7 +344,7 @@ if (!$mainglossary or $mainglossary->id == $form->instance ) {
         echo "</tr>";
 
         echo "<tr valign=top>";
-        echo "<td align=right><p><b>".get_string("rssarticles")."</b></p></td>";
+        echo "<td align=right><p><b>".get_string("rssarticles").":</b></p></td>";
         echo "<td>";
         unset($choices);
         $choices[0] = "0";
